--- a/README
+++ b/README
@@ -50,3 +50,15 @@ You can reset the database by press 'Refresh DB' use wit cautions because all of
 
 Logout:
 You can refresh the page by pressing 'Log Out'
+
+Addition infomation:
+1. the price of each flight ticket is $1000, however, we are giving the 20% off for follow groups:
+ - youths (  < 18 years old) 
+ - seniors (  > 56 years old)
+
+ 2. We charge an extra $10 for adding the movie option
+ 3. we charge an extra $20 for adding the meal option
+ 4. We change 8% taxes of the total transaction 
+
+
+Thank you for using our service, hope to see you again!
